--- a/pseudo_bulk_qc_html_report/scripts/mutationreport.Rmd
+++ b/pseudo_bulk_qc_html_report/scripts/mutationreport.Rmd
@@ -37,9 +37,11 @@ mafhighimpact <- readr::read_delim(params$high_impact_maf, delim = "\t", guess_m
 
 ### SNVs
 ```{r, echo = FALSE}
-snv %>%
-filter((effect_impact == "HIGH") | ((effect_impact == "MODERATE") & str_detect(effect, "NON_SYNONYMOUS_CODING|STOP_GAINED"))) %>%
-  dplyr::mutate(id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
+filtered_data = filter(snv, (effect_impact == "HIGH") | ((effect_impact == "MODERATE") & str_detect(effect, "NON_SYNONYMOUS_CODING|STOP_GAINED"))) 
+if (nrow(filtered_data) == 0){
+    print ("no data pass impact filtering")
+} else {
+  dplyr::mutate(filtered_data, id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
   mutate(gene_name = paste0('<a href="',"https://www.genecards.org/cgi-bin/carddisp.pl?gene=",gene_name,'">',gene_name ,"</a>")) %>%
   group_by(chrom, coord, ref, alt, gene_name, effect, effect_impact, is_cosmic, amino_acid_change) %>%
   summarize(nlibrary = n(),
@@ -51,22 +53,25 @@ filter((effect_impact == "HIGH") | ((effect_impact == "MODERATE") & str_detect(e
             mean_tVAF = round(mean(tVAF, na.rm = T), 3),
             tVAF = paste(round(tVAF, 3), collapse = ",")) %>%
   DT::datatable(., filter = 'top', options = list(pageLength = 10,lengthMenu = list(c(10, 25, 50, 100, -1), list('10', '25', '50','100', 'All'))), escape = FALSE)
+}
 ```
 
 ### Indels
 ```{r, echo = FALSE}
-
-mafhighimpact %>%
-  dplyr::mutate(id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
-  dplyr::rename(chrom = Chromosome, coord = Start_Position, gene_name = Hugo_Symbol) %>%
-    mutate(gene_name = paste0('<a href="',"https://www.genecards.org/cgi-bin/carddisp.pl?gene=",gene_name,'">',gene_name ,"</a>")) %>%
-  group_by(chrom, coord, Reference_Allele, Tumor_Seq_Allele1, Tumor_Seq_Allele2, Variant_Type, gene_name, Consequence, IMPACT) %>%
-  summarize(nlibrary = n(),
+if (nrow(mafhighimpact) > 0){
+	mafhighimpact %>%
+  	dplyr::mutate(id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
+  	dplyr::rename(chrom = Chromosome, coord = Start_Position, gene_name = Hugo_Symbol) %>%
+    	mutate(gene_name = paste0('<a href="',"https://www.genecards.org/cgi-bin/carddisp.pl?gene=",gene_name,'">',gene_name ,"</a>")) %>%
+  	group_by(chrom, coord, Reference_Allele, Tumor_Seq_Allele1, Tumor_Seq_Allele2, Variant_Type, gene_name, Consequence, IMPACT) %>%
+  	summarize(nlibrary = n(),
             ids = paste(id2, collapse = ","),
             mean_tVAF = round(mean(tVAF, na.rm = T), 3),
             tVAF = paste(round(tVAF, 3), collapse = ","),
             nVAF = paste(round(nVAF, 3), collapse = ",")) %>%
-DT::datatable(., filter = 'top', options = list(pageLength = 10,lengthMenu = list(c(10, 25, 50, 100, -1), list('10', '25', '50','100', 'All'))), escape = FALSE)
+	DT::datatable(., filter = 'top', options = list(pageLength = 10,lengthMenu = list(c(10, 25, 50, 100, -1), list('10', '25', '50','100', 'All'))), escape = FALSE)
+}
+
 ```
 
 ## Mutations per sample {.tabset .tabset-fade .tabset-pills}
@@ -81,8 +86,6 @@ snv %>%
   dplyr::mutate(id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
   ggplot(aes(y = n, x = forcats::fct_reorder(id2, n))) +
   geom_col(fill = "deepskyblue4") +
-  coord_flip() +
-  scale_y_log10() +
   xlab("") +
   ylab("# Mutations") +
   theme_classic()
@@ -108,19 +111,23 @@ maf %>%
 ### SNV
 ```{r, echo = FALSE, fig.height=10}
 # All defaults
-snv %>%
-  dplyr::filter((effect_impact == "HIGH") | ((effect_impact == "MODERATE") & str_detect(effect, "NON_SYNONYMOUS_CODING|STOP_GAINED"))) %>%
-  group_by(id) %>%
-  summarize(n = n()) %>%
-  ungroup() %>%
-  dplyr::mutate(id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
-  ggplot(aes(y = n, x = forcats::fct_reorder(id2, n))) +
-  geom_col(fill = "deepskyblue4") +
-  coord_flip() +
-  scale_y_log10() +
-  xlab("") +
-  ylab("# Mutations") +
-  theme_classic()
+filtered_data = dplyr::filter(snv, (effect_impact == "HIGH") | ((effect_impact == "MODERATE") & str_detect(effect, "NON_SYNONYMOUS_CODING|STOP_GAINED")))
+print(filtered_data)
+if (nrow(filtered_data) == 0){
+  print ("no data pass impact filtering")
+} else {
+  group_by(filtered_data, id) %>%
+    summarize(n = n()) %>%
+    ungroup() %>%
+    dplyr::mutate(id2 = unlist(purrr::map(id, ~stringr::str_split(., "_snvs")[[1]][1]))) %>%
+    ggplot(aes(y = n, x = forcats::fct_reorder(id2, n))) +
+    geom_col(fill = "deepskyblue4") +
+    coord_flip() +
+    scale_y_log10() +
+    xlab("") +
+    ylab("# Mutations") +
+    theme_classic()
+}
 ```
 
 ### Indels
